--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <style>
         body {
@@ -10,20 +11,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
 </head>
+
 <body>
-   
     <h1>URl Shortner</h1>
     <% if (locals.id){%>
-    <p>URL Generated : http://localhost/url <%= id %></p>
-<%}%>
-    <div> 
-        <form method="POST" action="/url">
-            <label>Enter your original URL </label>
-            <input t. ype="text" name="url" placeholder="https://example.com"/>
-            <button type="submit">Generate URL</button>
-        </form>
-    </div>
-                                                                                                           
-</body>
-</html>
+        <p>URL Generated : <a href="http://localhost:8001/url/<%= id %>" target="_blank">http://localhost:8001/url/<%=
+                    id %></a></p>
+        <%}%>
+            <div>
+                <form method="POST" action="/url">
+                    <label>Enter your original URL </label>
+                    <input t. ype="text" name="url" placeholder="https://example.com" />
+                    <button type="submit">Generate URL</button>
+                </form>
 
+            </div>
+            <div>
+
+                <% if (locals.urls) { %>
+                    <table>
+                        <thead>
+                            <th> Sr. No. </th>
+                            <th> Short-ID</th>
+                            <th> Redirect Url</th>
+                            <th> Total Clicks</th>
+                        </thead>
+                        <tbody>
+
+                            <% urls.forEach((url,index)=> { %>
+
+                                <tr>
+                                    <td>
+                                        <%=index + 1%>
+                                    </td>
+                                    <td>
+                                        <%= url.shortId%>
+                                    </td>
+                                    <td>
+                                        <%=url.redirectUrl%>
+                                    </td>
+                                    <td>
+                                        <%=url.visitHistory.length%>
+                                    </td>
+                                </tr>
+                                <% }) %>
+
+                        </tbody>
+                    </table>
+                    <% } %>
+            </div>
+
+</body>
+
+</html>
